# ferricoxide-os

./: .gitignore  Cargo.toml  Makefile  README.md  b.py  rust-toolchain.toml
kernel/: Cargo.toml  ds.rs  fs.rs  kernel.rs  kprelude.rs  kprintf.rs  kutils.rs  lib.rs  panicking.rs  serial.rs  units.rs  vga.rs
kernel/.cargo/: config.toml
kernel/arch/: mod.rs
kernel/arch/x86_64/: acpi.rs  boot.s  cpu.rs  entry.rs  gdt.rs  io.rs  kmain0.s  linker.ld  mm.rs  mod.rs  multiboot.s  x86_64-ferricoxide_os.json
kernel/arch/x86_64/acpi/: apic.rs
kernel/arch/x86_64/boot/: boot.s  long_mode.s  multiboot_header.s
kernel/arch/x86_64/cpu/: cpuid.rs  mod.rs  registers.rs
kernel/arch/x86_64/interrupts/: apic.rs  gdt.rs  ioapic.rs  mod.rs  pit.rs  pit8254.rs
kernel/arch/x86_64/mm/: area_frame_allocator.rs  frame.rs  frame_alloc.rs  mod.rs  page_table.rs  paging.rs  stack_allocator.rs
kernel/dbg/: mod.rs
kernel/display/: framebuffer.rs  mod.rs  text_renderer.rs
kernel/drivers/: mod.rs
kernel/drivers/vga/: mod.rs
kernel/fs/: mod.rs  path.rs  ramfs.rs  vfs.rs
kernel/fs/vfs/: mod.rs
kernel/kutils/: errors.rs  mod.rs  possibly_uninit.rs  unsafe_sync.rs
kernel/logging/: mod.rs  serial.rs
kernel/logging/vga/: bufferwriter.rs  mod.rs  textmodewriter.rs
kernel/mm/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
kernel/mm/paging/: entry.rs  mod.rs  table.rs  temporary_page.rs
kernel/panicking/: mod.rs
kernel/src/: lib.rs
kernel/src/arch/: commands.rs  mod.rs
kernel/src/interrupts/: mod.rs
kernel/src/logging/: mod.rs  serial.rs
kernel/src/mm/: mod.rs
kernel/src/vga/: mod.rs
kernel/task/: executor.rs  keyboard.rs  mod.rs
kernel/thread/: mod.rs
kernel/vga/: mod.rs
prekernel/: Cargo.toml  kprintf.rs  kutils.rs  prekernel.rs
prekernel/.cargo/: config.toml
prekernel/arch/: mod.rs
prekernel/arch/x86/: i686-ferricoxide_os.json  linker.ld  main.rs  mod.rs
prekernel/assets/: FerricOxide.tga
(+38 files in other folders)
