[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["MD Gaziur Rahman Noor <mdgaziurrahmannoor@gmail.com>"]

[lib]
path = "kernel.rs"
crate-type = ["staticlib"]

[profile.release]
panic = "abort"
debug = true

[profile.dev]
opt-level = 2
panic = "abort"

[dependencies]
multiboot2 = { version = "0.19.0", default-features = false }
uart_16550 = "0.3.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
bitflags = "2.4.0"
x86_64 = { version = "0.14.11", features = ["instructions"] }
linked_list_allocator = "0.10.5"
noto-sans-mono-bitmap = "0.2.0"
once = "0.3.4"
