[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
path = "kernel.rs"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
multiboot2 = { version = "0.23.1", default-features = false }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9.8"
uart_16550 = "0.3.1"
bitflags = "2.8.0"
