[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
path = "kernel.rs"
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
multiboot2 = { version = "0.23.1", default-features = false }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
uart_16550 = "0.3.1"
bitflags = "2.8.0"
linked_list_allocator = "0.10.5"
x86_64 = "0.15.2"
